# vfx-reference-platform

./: CMakeLists.txt  LICENSE  README.md
CY2015/: CMakeLists.txt
CY2016/: CMakeLists.txt
cmake/: Python_2_7_11.cmake  Python_2_template.cmake  Utils.cmake
cmake/boost/: boost_1_55_0_apply_patches.sh  boost_1_55_0_bootstrap.sh.patch  boost_1_55_0_py_2_7_11.cmake  boost_1_55_0_py_2_7_6.cmake  boost_template.cmake
cmake/openexr/: OpenEXR_template.cmake
cmake/opensubdiv/: OpenSubdiv_template.cmake
cmake/pyside/: PySide_1_2_4.cmake  PySide_template.cmake
cmake/python/: Python_2_7_11.cmake  Python_2_template.cmake
cmake/qt/: qt_4_8_6.cmake  qt_4_template.cmake
